<resources>
    <string name="app_name">TP4_Grupo_7</string>
    <string name="ID">ID</string>
    <string name="buscar">BUSCAR</string>
    <string name="nombre_producto">NOMBRE PRODUCTO</string>
    <string name="stock">STOCK</string>
    <string name="categoria">CATEGORIA</string>
    <string name="alta">ALTA</string>
    <string name="MODIFICAR">MODIFICAR</string>
    <string name="LISTADO">LISTADO</string>
</resources>